syntax = "proto3";

                 package clreDedPrcDclrPdl;
service ClreDedPrcDclrPdlService {
 rpc createClreDedPrcDclrPdl (ClreDedPrcDclrPdlCreateInput) returns (ClreDedPrcDclrPdl) {}
rpc clreDedPrcDclrPdls (findManyParams) returns (stream ClreDedPrcDclrPdl) {}
rpc clreDedPrcDclrPdl (ClreDedPrcDclrPdlWhereUniqueInput) returns (ClreDedPrcDclrPdl) {}
rpc updateClreDedPrcDclrPdl (ClreDedPrcDclrPdlUpdateInput) returns (ClreDedPrcDclrPdl) {}
rpc deleteClreDedPrcDclrPdl (ClreDedPrcDclrPdlWhereUniqueInput) returns (ClreDedPrcDclrPdl) {} 
 }
message ClreDedPrcDclrPdlCreateInput {
int32 brngTrnpCst = 1;
int32 byerPymnCst = 2;
string createdAt = 3;
string delYn = 4;
string frstRegstId = 5;
string frstRgsrDttm = 6;
string id = 7;
int32 indrPymnTamt = 8;
int32 infeeAmt = 9;
string lastChgDttm = 10;
string lastChprId = 11;
int32 loadCstAmt = 12;
int32 mdfyDgcnt = 13;
string mdlStszNo = 14;
int32 mdtnPcfeAmt = 15;
int32 mnfuSrvc_1Amt = 16;
int32 mnfuSrvc_2Amt = 17;
int32 mnfuSrvc_3Amt = 18;
int32 mnfuSrvc_4Amt = 19;
int32 otcstAmt = 20;
int32 pcfeAmt = 21;
int32 pcfeLcneAmt = 22;
int32 pckgAmt = 23;
string pdlsNo = 24;
int32 pyrTrifAmt = 25;
string reffNo = 26;
int32 resaleErnAmt = 27;
int32 techSpptCst = 28;
int32 trnpCstAmt = 29;
string updatedAt = 30;
};
message ClreDedPrcDclrPdl {
int32 brngTrnpCst = 1;
int32 byerPymnCst = 2;
string createdAt = 3;
string delYn = 4;
string frstRegstId = 5;
string frstRgsrDttm = 6;
string id = 7;
int32 indrPymnTamt = 8;
int32 infeeAmt = 9;
string lastChgDttm = 10;
string lastChprId = 11;
int32 loadCstAmt = 12;
int32 mdfyDgcnt = 13;
string mdlStszNo = 14;
int32 mdtnPcfeAmt = 15;
int32 mnfuSrvc_1Amt = 16;
int32 mnfuSrvc_2Amt = 17;
int32 mnfuSrvc_3Amt = 18;
int32 mnfuSrvc_4Amt = 19;
int32 otcstAmt = 20;
int32 pcfeAmt = 21;
int32 pcfeLcneAmt = 22;
int32 pckgAmt = 23;
string pdlsNo = 24;
int32 pyrTrifAmt = 25;
string reffNo = 26;
int32 resaleErnAmt = 27;
int32 techSpptCst = 28;
int32 trnpCstAmt = 29;
string updatedAt = 30;
};
message ClreDedPrcDclrPdlWhereUniqueInput {
int32 brngTrnpCst = 1;
int32 byerPymnCst = 2;
string createdAt = 3;
string delYn = 4;
string frstRegstId = 5;
string frstRgsrDttm = 6;
string id = 7;
int32 indrPymnTamt = 8;
int32 infeeAmt = 9;
string lastChgDttm = 10;
string lastChprId = 11;
int32 loadCstAmt = 12;
int32 mdfyDgcnt = 13;
string mdlStszNo = 14;
int32 mdtnPcfeAmt = 15;
int32 mnfuSrvc_1Amt = 16;
int32 mnfuSrvc_2Amt = 17;
int32 mnfuSrvc_3Amt = 18;
int32 mnfuSrvc_4Amt = 19;
int32 otcstAmt = 20;
int32 pcfeAmt = 21;
int32 pcfeLcneAmt = 22;
int32 pckgAmt = 23;
string pdlsNo = 24;
int32 pyrTrifAmt = 25;
string reffNo = 26;
int32 resaleErnAmt = 27;
int32 techSpptCst = 28;
int32 trnpCstAmt = 29;
string updatedAt = 30;
};
message ClreDedPrcDclrPdlUpdateInput {
int32 brngTrnpCst = 1;
int32 byerPymnCst = 2;
string createdAt = 3;
string delYn = 4;
string frstRegstId = 5;
string frstRgsrDttm = 6;
string id = 7;
int32 indrPymnTamt = 8;
int32 infeeAmt = 9;
string lastChgDttm = 10;
string lastChprId = 11;
int32 loadCstAmt = 12;
int32 mdfyDgcnt = 13;
string mdlStszNo = 14;
int32 mdtnPcfeAmt = 15;
int32 mnfuSrvc_1Amt = 16;
int32 mnfuSrvc_2Amt = 17;
int32 mnfuSrvc_3Amt = 18;
int32 mnfuSrvc_4Amt = 19;
int32 otcstAmt = 20;
int32 pcfeAmt = 21;
int32 pcfeLcneAmt = 22;
int32 pckgAmt = 23;
string pdlsNo = 24;
int32 pyrTrifAmt = 25;
string reffNo = 26;
int32 resaleErnAmt = 27;
int32 techSpptCst = 28;
int32 trnpCstAmt = 29;
string updatedAt = 30;
};
message findManyParams {

};