syntax = "proto3";

                 package clreDedRimexPrngPdl;
service ClreDedRimexPrngPdlService {
 rpc createClreDedRimexPrngPdl (ClreDedRimexPrngPdlCreateInput) returns (ClreDedRimexPrngPdl) {}
rpc clreDedRimexPrngPdls (findManyParams) returns (stream ClreDedRimexPrngPdl) {}
rpc clreDedRimexPrngPdl (ClreDedRimexPrngPdlWhereUniqueInput) returns (ClreDedRimexPrngPdl) {}
rpc updateClreDedRimexPrngPdl (ClreDedRimexPrngPdlUpdateInput) returns (ClreDedRimexPrngPdl) {}
rpc deleteClreDedRimexPrngPdl (ClreDedRimexPrngPdlWhereUniqueInput) returns (ClreDedRimexPrngPdl) {} 
 }
message ClreDedRimexPrngPdlCreateInput {
string cmdtClsfSpelCd = 1;
string createdAt = 2;
string delYn = 3;
string dlngPdlsNm = 4;
string frstRegstId = 5;
string frstRgsrDttm = 6;
string hsCd = 7;
string hsErrPvntVal = 8;
string id = 9;
string lastChgDttm = 10;
string lastChprId = 11;
int32 mdfyDgcnt = 12;
string orcyCntyCd = 13;
string pdlsNm = 14;
int32 pdlsNtwg = 15;
int32 pdlsTtwg = 16;
string prngPdlsNo = 17;
int32 qty = 18;
string qtyUtCd = 19;
string reffNo = 20;
string updatedAt = 21;
};
message ClreDedRimexPrngPdl {
string cmdtClsfSpelCd = 1;
string createdAt = 2;
string delYn = 3;
string dlngPdlsNm = 4;
string frstRegstId = 5;
string frstRgsrDttm = 6;
string hsCd = 7;
string hsErrPvntVal = 8;
string id = 9;
string lastChgDttm = 10;
string lastChprId = 11;
int32 mdfyDgcnt = 12;
string orcyCntyCd = 13;
string pdlsNm = 14;
int32 pdlsNtwg = 15;
int32 pdlsTtwg = 16;
string prngPdlsNo = 17;
int32 qty = 18;
string qtyUtCd = 19;
string reffNo = 20;
string updatedAt = 21;
};
message ClreDedRimexPrngPdlWhereUniqueInput {
string cmdtClsfSpelCd = 1;
string createdAt = 2;
string delYn = 3;
string dlngPdlsNm = 4;
string frstRegstId = 5;
string frstRgsrDttm = 6;
string hsCd = 7;
string hsErrPvntVal = 8;
string id = 9;
string lastChgDttm = 10;
string lastChprId = 11;
int32 mdfyDgcnt = 12;
string orcyCntyCd = 13;
string pdlsNm = 14;
int32 pdlsNtwg = 15;
int32 pdlsTtwg = 16;
string prngPdlsNo = 17;
int32 qty = 18;
string qtyUtCd = 19;
string reffNo = 20;
string updatedAt = 21;
};
message ClreDedRimexPrngPdlUpdateInput {
string cmdtClsfSpelCd = 1;
string createdAt = 2;
string delYn = 3;
string dlngPdlsNm = 4;
string frstRegstId = 5;
string frstRgsrDttm = 6;
string hsCd = 7;
string hsErrPvntVal = 8;
string id = 9;
string lastChgDttm = 10;
string lastChprId = 11;
int32 mdfyDgcnt = 12;
string orcyCntyCd = 13;
string pdlsNm = 14;
int32 pdlsNtwg = 15;
int32 pdlsTtwg = 16;
string prngPdlsNo = 17;
int32 qty = 18;
string qtyUtCd = 19;
string reffNo = 20;
string updatedAt = 21;
};
message findManyParams {

};