syntax = "proto3";

                 package clreDedVhcl;
service ClreDedVhclService {
 rpc createClreDedVhcl (ClreDedVhclCreateInput) returns (ClreDedVhcl) {}
rpc clreDedVhcls (findManyParams) returns (stream ClreDedVhcl) {}
rpc clreDedVhcl (ClreDedVhclWhereUniqueInput) returns (ClreDedVhcl) {}
rpc updateClreDedVhcl (ClreDedVhclUpdateInput) returns (ClreDedVhcl) {}
rpc deleteClreDedVhcl (ClreDedVhclWhereUniqueInput) returns (ClreDedVhcl) {} 
 }
message ClreDedVhclCreateInput {
string caboNm = 1;
string carRgsrNo = 2;
string chssNo = 3;
string clrNm = 4;
string createdAt = 5;
string delYn = 6;
string dpcmtCn = 7;
string drvrAddr = 8;
string drvrNm = 9;
string drvrPostNo = 10;
string flKndNm = 11;
string frstOpraDt = 12;
string frstRegstId = 13;
string frstRgsrDttm = 14;
string id = 15;
string impPtNm = 16;
string lastChgDttm = 17;
string lastChprId = 18;
string loadWghtCn = 19;
int32 mdfyDgcnt = 20;
string mdlStszNo = 21;
string mkngYy = 22;
string otptCn = 23;
string pdlsNo = 24;
string reffNo = 25;
int32 stcnt = 26;
string tpdMgmtNo = 27;
string trsfNnprEndDt = 28;
string trsfNnprStrtDt = 29;
string trsfNnprYn = 30;
string updatedAt = 31;
string vhclKndCd = 32;
string vhclKndNm = 33;
string vhclMdlCd = 34;
string vhclMnurCd = 35;
string vhclReleDt = 36;
string vhclWghtCn = 37;
};
message ClreDedVhcl {
string caboNm = 1;
string carRgsrNo = 2;
string chssNo = 3;
string clrNm = 4;
string createdAt = 5;
string delYn = 6;
string dpcmtCn = 7;
string drvrAddr = 8;
string drvrNm = 9;
string drvrPostNo = 10;
string flKndNm = 11;
string frstOpraDt = 12;
string frstRegstId = 13;
string frstRgsrDttm = 14;
string id = 15;
string impPtNm = 16;
string lastChgDttm = 17;
string lastChprId = 18;
string loadWghtCn = 19;
int32 mdfyDgcnt = 20;
string mdlStszNo = 21;
string mkngYy = 22;
string otptCn = 23;
string pdlsNo = 24;
string reffNo = 25;
int32 stcnt = 26;
string tpdMgmtNo = 27;
string trsfNnprEndDt = 28;
string trsfNnprStrtDt = 29;
string trsfNnprYn = 30;
string updatedAt = 31;
string vhclKndCd = 32;
string vhclKndNm = 33;
string vhclMdlCd = 34;
string vhclMnurCd = 35;
string vhclReleDt = 36;
string vhclWghtCn = 37;
};
message ClreDedVhclWhereUniqueInput {
string caboNm = 1;
string carRgsrNo = 2;
string chssNo = 3;
string clrNm = 4;
string createdAt = 5;
string delYn = 6;
string dpcmtCn = 7;
string drvrAddr = 8;
string drvrNm = 9;
string drvrPostNo = 10;
string flKndNm = 11;
string frstOpraDt = 12;
string frstRegstId = 13;
string frstRgsrDttm = 14;
string id = 15;
string impPtNm = 16;
string lastChgDttm = 17;
string lastChprId = 18;
string loadWghtCn = 19;
int32 mdfyDgcnt = 20;
string mdlStszNo = 21;
string mkngYy = 22;
string otptCn = 23;
string pdlsNo = 24;
string reffNo = 25;
int32 stcnt = 26;
string tpdMgmtNo = 27;
string trsfNnprEndDt = 28;
string trsfNnprStrtDt = 29;
string trsfNnprYn = 30;
string updatedAt = 31;
string vhclKndCd = 32;
string vhclKndNm = 33;
string vhclMdlCd = 34;
string vhclMnurCd = 35;
string vhclReleDt = 36;
string vhclWghtCn = 37;
};
message ClreDedVhclUpdateInput {
string caboNm = 1;
string carRgsrNo = 2;
string chssNo = 3;
string clrNm = 4;
string createdAt = 5;
string delYn = 6;
string dpcmtCn = 7;
string drvrAddr = 8;
string drvrNm = 9;
string drvrPostNo = 10;
string flKndNm = 11;
string frstOpraDt = 12;
string frstRegstId = 13;
string frstRgsrDttm = 14;
string id = 15;
string impPtNm = 16;
string lastChgDttm = 17;
string lastChprId = 18;
string loadWghtCn = 19;
int32 mdfyDgcnt = 20;
string mdlStszNo = 21;
string mkngYy = 22;
string otptCn = 23;
string pdlsNo = 24;
string reffNo = 25;
int32 stcnt = 26;
string tpdMgmtNo = 27;
string trsfNnprEndDt = 28;
string trsfNnprStrtDt = 29;
string trsfNnprYn = 30;
string updatedAt = 31;
string vhclKndCd = 32;
string vhclKndNm = 33;
string vhclMdlCd = 34;
string vhclMnurCd = 35;
string vhclReleDt = 36;
string vhclWghtCn = 37;
};
message findManyParams {

};