syntax = "proto3";

                 package clreDedVlutComn;
service ClreDedVlutComnService {
 rpc createClreDedVlutComn (ClreDedVlutComnCreateInput) returns (ClreDedVlutComn) {}
rpc clreDedVlutComns (findManyParams) returns (stream ClreDedVlutComn) {}
rpc clreDedVlutComn (ClreDedVlutComnWhereUniqueInput) returns (ClreDedVlutComn) {}
rpc updateClreDedVlutComn (ClreDedVlutComnUpdateInput) returns (ClreDedVlutComn) {}
rpc deleteClreDedVlutComn (ClreDedVlutComnWhereUniqueInput) returns (ClreDedVlutComn) {} 
 }
message ClreDedVlutComnCreateInput {
int32 cachAmt = 1;
string cachCurrCd = 2;
int32 cachFxrt = 3;
int32 cachNcyAmt = 4;
string createdAt = 5;
int32 ddctAmt = 6;
string ddctCurrCd = 7;
int32 ddctFxrt = 8;
int32 ddctNcyAmt = 9;
int32 ddctRt = 10;
string delYn = 11;
string frstRegstId = 12;
string frstRgsrDttm = 13;
string id = 14;
int32 infeeAmt = 15;
string infeeCurrCd = 16;
int32 infeeFxrt = 17;
int32 infeeNcyAmt = 18;
int32 invcAmt = 19;
string invcCurrCd = 20;
int32 invcFxrt = 21;
int32 invcNcyAmt = 22;
int32 invcUsdAmt = 23;
string lastChgDttm = 24;
string lastChprId = 25;
int32 mdfyDgcnt = 26;
int32 otcstAmt = 27;
string otcstCurrCd = 28;
int32 otcstFxrt = 29;
int32 otcstNcyAmt = 30;
string reffNo = 31;
int32 ttxbsNcyAmt = 32;
int32 ttxbsUsdAmt = 33;
int32 tvlutNcyAmt = 34;
int32 tvlutUsdAmt = 35;
string updatedAt = 36;
};
message ClreDedVlutComn {
int32 cachAmt = 1;
string cachCurrCd = 2;
int32 cachFxrt = 3;
int32 cachNcyAmt = 4;
string createdAt = 5;
int32 ddctAmt = 6;
string ddctCurrCd = 7;
int32 ddctFxrt = 8;
int32 ddctNcyAmt = 9;
int32 ddctRt = 10;
string delYn = 11;
string frstRegstId = 12;
string frstRgsrDttm = 13;
string id = 14;
int32 infeeAmt = 15;
string infeeCurrCd = 16;
int32 infeeFxrt = 17;
int32 infeeNcyAmt = 18;
int32 invcAmt = 19;
string invcCurrCd = 20;
int32 invcFxrt = 21;
int32 invcNcyAmt = 22;
int32 invcUsdAmt = 23;
string lastChgDttm = 24;
string lastChprId = 25;
int32 mdfyDgcnt = 26;
int32 otcstAmt = 27;
string otcstCurrCd = 28;
int32 otcstFxrt = 29;
int32 otcstNcyAmt = 30;
string reffNo = 31;
int32 ttxbsNcyAmt = 32;
int32 ttxbsUsdAmt = 33;
int32 tvlutNcyAmt = 34;
int32 tvlutUsdAmt = 35;
string updatedAt = 36;
};
message ClreDedVlutComnWhereUniqueInput {
int32 cachAmt = 1;
string cachCurrCd = 2;
int32 cachFxrt = 3;
int32 cachNcyAmt = 4;
string createdAt = 5;
int32 ddctAmt = 6;
string ddctCurrCd = 7;
int32 ddctFxrt = 8;
int32 ddctNcyAmt = 9;
int32 ddctRt = 10;
string delYn = 11;
string frstRegstId = 12;
string frstRgsrDttm = 13;
string id = 14;
int32 infeeAmt = 15;
string infeeCurrCd = 16;
int32 infeeFxrt = 17;
int32 infeeNcyAmt = 18;
int32 invcAmt = 19;
string invcCurrCd = 20;
int32 invcFxrt = 21;
int32 invcNcyAmt = 22;
int32 invcUsdAmt = 23;
string lastChgDttm = 24;
string lastChprId = 25;
int32 mdfyDgcnt = 26;
int32 otcstAmt = 27;
string otcstCurrCd = 28;
int32 otcstFxrt = 29;
int32 otcstNcyAmt = 30;
string reffNo = 31;
int32 ttxbsNcyAmt = 32;
int32 ttxbsUsdAmt = 33;
int32 tvlutNcyAmt = 34;
int32 tvlutUsdAmt = 35;
string updatedAt = 36;
};
message ClreDedVlutComnUpdateInput {
int32 cachAmt = 1;
string cachCurrCd = 2;
int32 cachFxrt = 3;
int32 cachNcyAmt = 4;
string createdAt = 5;
int32 ddctAmt = 6;
string ddctCurrCd = 7;
int32 ddctFxrt = 8;
int32 ddctNcyAmt = 9;
int32 ddctRt = 10;
string delYn = 11;
string frstRegstId = 12;
string frstRgsrDttm = 13;
string id = 14;
int32 infeeAmt = 15;
string infeeCurrCd = 16;
int32 infeeFxrt = 17;
int32 infeeNcyAmt = 18;
int32 invcAmt = 19;
string invcCurrCd = 20;
int32 invcFxrt = 21;
int32 invcNcyAmt = 22;
int32 invcUsdAmt = 23;
string lastChgDttm = 24;
string lastChprId = 25;
int32 mdfyDgcnt = 26;
int32 otcstAmt = 27;
string otcstCurrCd = 28;
int32 otcstFxrt = 29;
int32 otcstNcyAmt = 30;
string reffNo = 31;
int32 ttxbsNcyAmt = 32;
int32 ttxbsUsdAmt = 33;
int32 tvlutNcyAmt = 34;
int32 tvlutUsdAmt = 35;
string updatedAt = 36;
};
message findManyParams {

};